FLY wire David/force-app/main/default/objects/Campaign/fields/Additional_Activation__c.field-meta.xml
<CustomField>
    <fullName>Additional_Activation__c</fullName>
    <description>List of other activations Flywire is hosting at the conference.</description>
    <inlineHelpText>Party? Dinner? Etc.</inlineHelpText>
    <label>Additional Activation?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Cocktail Party</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>