FLY wire David/force-app/main/default/objects/Campaign/fields/Booth_Comes_With_del__c.field-meta.xml
<CustomField>
    <fullName>Booth_Comes_With_del__c</fullName>
    <description>Enter any additional booth details that are included with the cost of purchasing a booth (example - 2 badges, table/chairs, rug)</description>
    <inlineHelpText>Enter any additional booth details that are included with the cost of purchasing a booth (example - 2 badges, table/chairs, rug)</inlineHelpText>
    <label>Booth Comes With</label>
    <type>TextArea</type>
</CustomField>