FLY wire David/force-app/main/default/objects/Campaign/fields/Booth_Number__c.field-meta.xml
<CustomField>
    <fullName>Booth_Number__c</fullName>
    <description>Enter the number of the booth Flywire will have at the tradeshow.</description>
    <inlineHelpText>Enter the number of the booth Flywire will have at the tradeshow.</inlineHelpText>
    <label>Booth Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>