FLY wire David/force-app/main/default/objects/Campaign/fields/Break_Down_Hours_del__c.field-meta.xml
<CustomField>
    <fullName>Break_Down_Hours_del__c</fullName>
    <description>Enter the day/time when break down for the booth should take place. To be shared with sales reps responsible for breakdown down the booth.</description>
    <inlineHelpText>Enter the day/time when break down for the booth should take place</inlineHelpText>
    <label>Break Down Hours</label>
    <type>DateTime</type>
</CustomField>