FLY wire David/force-app/main/default/objects/Campaign/fields/Buzz_Cost_del__c.field-meta.xml
<CustomField>
    <fullName>Buzz_Cost_del__c</fullName>
    <description>Enter the total cost for the buzz event hosted for this tradeshow.  Include cost to rent facility, pay for food, drink tickets etc.</description>
    <inlineHelpText>Enter the total cost for the buzz event hosted for this tradeshow.  Include cost to rent facility, pay for food, drink tickets etc.</inlineHelpText>
    <label>Buzz Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>