FLY wire David/force-app/main/default/objects/Campaign/fields/Buzz_Event_Type_del__c.field-meta.xml
<CustomField>
    <fullName>Buzz_Event_Type_del__c</fullName>
    <description>If doing a buzz event enter the type of event we are doing.</description>
    <inlineHelpText>If doing a buzz event enter the type of event we are doing.</inlineHelpText>
    <label>Buzz Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cocktail</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Luncheon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>