FLY wire David/force-app/main/default/objects/Campaign/fields/Campaign_Long_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Long_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Campaign Long ID</label>
    <type>Text</type>
</CustomField>