FLY wire David/force-app/main/default/objects/Campaign/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Content promoted in the campaign.</description>
    <inlineHelpText>Content promoted in the campaign.</inlineHelpText>
    <label>Content</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Best Practices Guide: Five Questions To Ask Payment Plan Providers</fullName>
            </value>
            <value>
                <fullName>Best Practices Guide: Four Ways To Make Education Payments Easier For Students</fullName>
            </value>
            <value>
                <fullName>Best Practices Guide: Six Steps To Avoid Payment Scams</fullName>
            </value>
            <value>
                <fullName>Best Practices Guide: Three Reasons Education Institutions Partner With Flywire</fullName>
            </value>
            <value>
                <fullName>Credit Card Fees For The Travel Industry</fullName>
            </value>
            <value>
                <fullName>Don&apos;t become a payments business!</fullName>
            </value>
            <value>
                <fullName>Discover Ways to Attract More Overseas Students</fullName>
            </value>
            <value>
                <fullName>Planning with Confidence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>