FLY wire David/force-app/main/default/objects/Campaign/fields/Cost_Additional_Registrations_del__c.field-meta.xml
<CustomField>
    <fullName>Cost_Additional_Registrations_del__c</fullName>
    <description>Enter the cost for additional registration/badges purchased. To be used to sales tradeshows.  If the number of badges needed exceeds the number included with booth registration the sales team budget owns this additional cost.  Need to be able to segment this from total to give to their manager.</description>
    <inlineHelpText>Enter the cost for additional registration/badges purchased</inlineHelpText>
    <label>Cost Additional Registrations</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>