FLY wire David/force-app/main/default/objects/Campaign/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Please select the Country that the tradeshow is being held in.</description>
    <inlineHelpText>Please select the Country that the tradeshow is being held in.</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>