FLY wire David/force-app/main/default/objects/Campaign/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>Full name of the conference or tradeshow</description>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>