FLY wire David/force-app/main/default/objects/Campaign/fields/Event_Website__c.field-meta.xml
<CustomField>
    <fullName>Event_Website__c</fullName>
    <label>Event Website</label>
    <type>Url</type>
</CustomField>