FLY wire David/force-app/main/default/objects/Campaign/fields/Exhibitor_Services_Cost_del__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Services_Cost_del__c</fullName>
    <description>Enter the cost for exhibitor services fees for this tradeshow.</description>
    <inlineHelpText>Enter the cost for exhibitor services fees for this tradeshow.</inlineHelpText>
    <label>Exhibitor Services Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>