FLY wire David/force-app/main/default/objects/Campaign/fields/Expected_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Expected_Attendees__c</fullName>
    <inlineHelpText>How many people are expected to attend this tradeshow?</inlineHelpText>
    <label>Expected Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>