FLY wire David/force-app/main/default/objects/Campaign/fields/Flywire_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Flywire_Attendees__c</fullName>
    <description>Enter the names of Flywire coworkers who will be attending the tradeshow/conference.</description>
    <label>Flywire Attendees</label>
    <type>TextArea</type>
</CustomField>