FLY wire David/force-app/main/default/objects/Campaign/fields/Last_Year_s_Attendee_List__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_s_Attendee_List__c</fullName>
    <description>If possible, a link to the attendee list from the previous year.</description>
    <inlineHelpText>If possible, a link to the attendee list from the previous year.</inlineHelpText>
    <label>Last Year&apos;s Attendee List</label>
    <type>Url</type>
</CustomField>