FLY wire David/force-app/main/default/objects/Campaign/fields/Marketing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Flywire contact about the event.</description>
    <inlineHelpText>Questions about the event? Contact this person.</inlineHelpText>
    <label>Marketing Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>