FLY wire David/force-app/main/default/objects/Campaign/fields/of_Passes__c.field-meta.xml
<CustomField>
    <fullName>of_Passes__c</fullName>
    <label># of Passes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>