FLY wire David/force-app/main/default/objects/Campaign/fields/Participation_Level__c.field-meta.xml
<CustomField>
    <fullName>Participation_Level__c</fullName>
    <description>Level we are participating at the event.</description>
    <inlineHelpText>At what level is Flywire investing in this event?</inlineHelpText>
    <label>Participation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attending Only</fullName>
            </value>
            <value>
                <fullName>Exhibiting</fullName>
            </value>
            <value>
                <fullName>Other Activation</fullName>
            </value>
            <value>
                <fullName>Other Sponsorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>