FLY wire David/force-app/main/default/objects/Campaign/fields/Pre_Event_List__c.field-meta.xml
<CustomField>
    <fullName>Pre_Event_List__c</fullName>
    <description>Link to the pre-event list, when available</description>
    <label>Pre-Event List</label>
    <type>Url</type>
</CustomField>