FLY wire David/force-app/main/default/objects/Campaign/fields/Pre_Event_List_Expected__c.field-meta.xml
<CustomField>
    <fullName>Pre_Event_List_Expected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are we expecting to receive a list before the event?</description>
    <label>Pre-Event List Expected?</label>
    <type>Checkbox</type>
</CustomField>