FLY wire David/force-app/main/default/objects/Campaign/fields/Pre_Event_Outreach_Requested_by_MKTG__c.field-meta.xml
<CustomField>
    <fullName>Pre_Event_Outreach_Requested_by_MKTG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Event Outreach Requested by MKTG?</label>
    <type>Checkbox</type>
</CustomField>