FLY wire David/force-app/main/default/objects/Campaign/fields/Pre_Event_Outreach_Templates__c.field-meta.xml
<CustomField>
    <fullName>Pre_Event_Outreach_Templates__c</fullName>
    <description>If marketing is providing pre-event templates, they will be linked here.</description>
    <inlineHelpText>If marketing is providing pre-event templates, they will be linked here.</inlineHelpText>
    <label>Pre-Event Outreach Templates</label>
    <type>Url</type>
</CustomField>