FLY wire David/force-app/main/default/objects/Campaign/fields/Pre_Event_Outreach_Type__c.field-meta.xml
<CustomField>
    <fullName>Pre_Event_Outreach_Type__c</fullName>
    <description>What type of pre-event outreach will the BDRs need to do?</description>
    <label>Pre-Event Outreach Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:1 Meetings</fullName>
            </value>
            <value>
                <fullName>Party Invite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>