FLY wire David/force-app/main/default/objects/Campaign/fields/primary_event_goal__c.field-meta.xml
<CustomField>
    <fullName>primary_event_goal__c</fullName>
    <label>Primary Event Goal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand Awareness</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Relationship Management</fullName>
            </value>
            <value>
                <fullName>Selling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>