FLY wire David/force-app/main/default/objects/Campaign/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region supported by the event.</description>
    <inlineHelpText>Enter the primary region supported by the event, usually the event location.</inlineHelpText>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>GLOBAL</fullName>
            </value>
            <value>
                <fullName>NAMER</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
                <isActive>false</isActive>
                <label>AUS</label>
            </value>
            <value>
                <fullName>CANADA</fullName>
                <isActive>false</isActive>
                <label>CANADA</label>
            </value>
            <value>
                <fullName>South Africa</fullName>
                <isActive>false</isActive>
                <label>SOUTH AFRICA</label>
            </value>
            <value>
                <fullName>UK</fullName>
                <isActive>false</isActive>
                <label>UK</label>
            </value>
            <value>
                <fullName>US</fullName>
                <isActive>false</isActive>
                <label>US</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>