FLY wire David/force-app/main/default/objects/Campaign/fields/Speaker_Session_Description__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Session_Description__c</fullName>
    <label>Speaker &amp; Session Description</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>