FLY wire David/force-app/main/default/objects/Campaign/fields/Speaking__c.field-meta.xml
<CustomField>
    <fullName>Speaking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does Flywire have a speaking session at this event?</description>
    <inlineHelpText>Does Flywire have a speaking session at this event?</inlineHelpText>
    <label>Speaking?</label>
    <type>Checkbox</type>
</CustomField>