FLY wire David/force-app/main/default/objects/Campaign/fields/Swag_Collateral__c.field-meta.xml
<CustomField>
    <fullName>Swag_Collateral__c</fullName>
    <description>Description of the swag and collateral sent for the event.</description>
    <label>Swag/Collateral</label>
    <type>TextArea</type>
</CustomField>