FLY wire David/force-app/main/default/objects/Campaign/fields/Sync_Bizible__c.field-meta.xml
<CustomField>
    <fullName>Sync_Bizible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Admin field for bizible implementation – MarOps will identify if the campaign record is to be historically sync&apos;d in Bizible platform</description>
    <inlineHelpText>Admin field for bizible implementation – MarOps will identify if the campaign record is to be historically sync&apos;d in Bizible platform</inlineHelpText>
    <label>Sync Bizible</label>
    <type>Checkbox</type>
</CustomField>