FLY wire David/force-app/main/default/objects/Campaign/fields/Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Link__c</fullName>
    <description>Tracking number for any shipments to the show</description>
    <label>Tracking Link</label>
    <type>Url</type>
</CustomField>