FLY wire David/force-app/main/default/objects/Campaign/fields/Unique_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Unique_Campaign__c</fullName>
    <description>admin only for reporting</description>
    <formula>1</formula>
    <inlineHelpText>admin only for reporting</inlineHelpText>
    <label>Unique Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>