FLY wire David/force-app/main/default/objects/Campaign/fields/Venue_Name_del__c.field-meta.xml
<CustomField>
    <fullName>Venue_Name_del__c</fullName>
    <description>Enter the name of the venue where the event is being held.</description>
    <inlineHelpText>Enter the name of the venue where the event is being held.</inlineHelpText>
    <label>Venue Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>