FLY wire David/force-app/main/default/objects/Campaign/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>Enter the market this show is for.  This helps to segment shows by Flywire vertical and industry related payments shows that e-team members go to.</description>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>Education Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>