FLY wire David/force-app/main/default/objects/Campaign/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Standard campaign record type to track all marketing activities.</description>
    <label>Standard</label>
</RecordType>