FLY wire David/force-app/main/default/objects/Campaign/listViews/B2B_Retargeting_Manufacturing.listView-meta.xml
<ListView>
    <fullName>B2B_Retargeting_Manufacturing</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>equals</operation>
        <value>AD_B2B_Retargeting_Industry_Manufacturing_December 2023</value>
    </filters>
    <label>B2B Retargeting - Manufacturing</label>
</ListView>