FLY wire David/force-app/main/default/objects/Campaign/listViews/Healthcare_Campaigns_ALL.listView-meta.xml
<ListView>
    <fullName>Healthcare_Campaigns_ALL</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>_HC,Healthcare,Beckers,HFMA,TS_Q1,AAHAM</value>
    </filters>
    <filters>
        <field>Vertical__c</field>
        <operation>equals</operation>
        <value>Healthcare</value>
    </filters>
    <label>Healthcare Campaigns - ALL</label>
</ListView>