FLY wire David/force-app/main/default/objects/Campaign/listViews/Recently_Created_Campaign.listView-meta.xml
<ListView>
    <fullName>Recently_Created_Campaign</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Vertical__c</columns>
    <columns>Region__c</columns>
    <columns>Content__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>6/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>equals</operation>
    </filters>
    <label>Recently Created Campaigns</label>
</ListView>